# quiz_compiler

./: .gitignore  Readme.md  config.json  grammar.bnf  pyproject.toml  task_description.txt  test.format.example.hs  test.format.other.hs  txt2im.01.py
diagrams/: arcitecture.drawio  code_generator_class_diagram.puml  uc_compilation.puml  uc_publish.puml
documentation/diagrams/: arcitecture.drawio  ast_hierachy.puml  code_ast_representation.puml  code_generator_class_diagram.puml  google_integration_class_diagram copy.puml  ticket_import.puml  uc_compilation.puml  uc_publish.puml  usecase_diagram.puml
documentation/diagrams/requirements/: test.format.other.hs
grammar/: ast.json  grammar_simplified.ebnf  grammar_simplified_rail.ebnf  grammar_simplified_rail_simple.ebnf  grammar_simplified_rail_simple.html  quiz_grammar.html
src/: ast_parser.py  constants.py  container.py  entities.py  lexer.py  manage.py  utils.py
src/services/: __init__.py  compiler.py  google_workspace.py  playground.py
tests/: python_test.py  test.format.example.hs  test_lexer.py  test_parser.py
