[tool.poetry]
name = "quiz-compiler"
version = "1.0.0"
description = "Compiler for quizes"
authors = ["Andrii Gerasymchuk <gera3dartist@gmail.com>"]
readme = "README.md"
packages = [{include = "quiz_compiler"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
